--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Resizing a Photo</h1>
       <p>Below is the original photo.</p>
       <br>
-      <img src="assets/originalphoto.jpg" alt="This is a photo of a succulent.">
+      <img src="/assets/originalphoto.jpg" alt="This is a photo of a succulent.">
       <br>
       <p>This is the resized photo.</p>
       <br>
