--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
   <html>
 
   <head>
@@ -14,12 +14,12 @@
       <br>
       <p>This is the resized photo.</p>
       <br>
-      <img src="assets/resizedphoto.jpg" alt="This is a smaller photo of a succulent." style="width:500px;height:333px;">>
+      <img src="assets/resizedphoto.jpg" alt="This is a smaller photo of a succulent." style="width:500px;height:333px;">
       <br>
       <br>
       <p>This is the dithered photo.</p>
       <br>
-      <img src="assets/ditherphoto.jpg" alt="This is a dithered photo of a succulent." style="width:500px;height:333px;">>
+      <img src="assets/ditherphoto.jpg" alt="This is a dithered photo of a succulent." style="width:500px;height:333px;">
       <br>
       <h1>Resizing a Graphic</h1>
       <p>Below is the original graphic.</p>
@@ -28,11 +28,11 @@
       <br>
       <p>This is the resized graphic.</p>
       <br>
-      <img src="assets/resizedgraphic.png" alt="This is a smaller graphic of Chip Kidd." style="width:500px;height:774px;">>
+      <img src="assets/resizedgraphic.png" alt="This is a smaller graphic of Chip Kidd." style="width:500px;height:774px;">
       <br>
       <p>This is the dithered graphic.</p>
       <br>
-      <img src="assets/dithergraphic.png" alt="This is a dithered graphic of Chip Kidd." style="width:500px;height:774px;">>
+      <img src="assets/dithergraphic.png" alt="This is a dithered graphic of Chip Kidd." style="width:500px;height:774px;">
       <br>
     </div>
 
