--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <br>
       <p>This is the dithered photo.</p>
       <br>
-      <img src="../assets/ditherphoto.jpg" alt="This is a dithered photo of a succulent." style="width:500px;height:333px;">
+      <img src="./assets/ditherphoto.jpg" alt="This is a dithered photo of a succulent." style="width:500px;height:333px;">
       <br>
       <h1>Resizing a Graphic</h1>
       <p>Below is the original graphic.</p>
