--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <h1>Resizing a Photo</h1>
       <p>Below is the original photo.</p>
       <br>
-      <img src="/../assets/originalphoto.jpg" alt="This is a photo of a succulent.">
+      <img src="./assets/originalphoto.jpg" alt="This is a photo of a succulent.">
       <br>
       <p>This is the resized photo.</p>
       <br>
-      <img src="../assets/resizedphoto.jpg" alt="This is a smaller photo of a succulent." style="width:500px;height:333px;">
+      <img src="./assets/resizedphoto.jpg" alt="This is a smaller photo of a succulent." style="width:500px;height:333px;">
       <br>
       <br>
       <p>This is the dithered photo.</p>
