--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <h1>Resizing a Graphic</h1>
       <p>Below is the original graphic.</p>
       <br>
-      <img src="../assets/originalgraphic.png" alt="This is a graphic of Chip Kidd.">
+      <img src="./assets/originalgraphic.png" alt="This is a graphic of Chip Kidd.">
       <br>
       <p>This is the resized graphic.</p>
       <br>
-      <img src="../assets/resizedgraphic.png" alt="This is a smaller graphic of Chip Kidd." style="width:500px;height:774px;">
+      <img src="./assets/resizedgraphic.png" alt="This is a smaller graphic of Chip Kidd." style="width:500px;height:774px;">
       <br>
       <p>This is the dithered graphic.</p>
       <br>
-      <img src="../assets/dithergraphic.png" alt="This is a dithered graphic of Chip Kidd." style="width:500px;height:774px;">
+      <img src="./assets/dithergraphic.png" alt="This is a dithered graphic of Chip Kidd." style="width:500px;height:774px;">
       <br>
     </div>
 
